--- a/about-us.html
+++ b/about-us.html
@@ -318,9 +318,9 @@
         <h2>Julie Hillard, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
         <p>
-          Julie Hillard is a licensed Social Worker who graduated from Lebanon Valley College with her
+          Julie Hillard is a Licensed Clinical Social Worker who graduated from Lebanon Valley College with her
           Bachelor of Arts in Psychology and Sociology, and obtained her Master’s Degree in Social Work from
-          Millersville University. Julie is a Certified Grief Counseling Specialist (CGCS).
+          Millersville University. Julie is also a Certified Grief Counseling Specialist (CGCS).
         </p>
         <p>
           Julie has nearly 20 years of experience in healthcare with backgrounds in skilled nursing settings,
