new employee and bio update

--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
       <h1>About Us</h1>
       <section>
         <h2>Nicole Woods, Director</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
-        <img class="headshot" src="images/woods_square_2015.jpg" alt="Picture of Nicole Woods">
+        <img class="headshot" src="images/woods_square_2024.jpg" alt="Picture of Nicole Woods">
         <p>
           Nicole's educational background includes graduating with honors from both Towson University 
           where she received her BS and the University of Maryland where she obtained her MSW.
@@ -55,21 +55,18 @@
           Nicole is an active member of the <a href="http://socialworkers.org/" title="NASW">NASW</a>,
           <a href="http://www.aed.org/" title="AED">AED</a>, 
           <a href="http://www.iaedp.com/" title="IAEDP">IAEDP</a>, 
-          <a href="http://www.napw.com/" title="NAPW">NAPW</a> ​​and is highly committed to her professional
+          <a href="http://www.napw.com/" title="NAPW">NAPW</a> and is highly committed to her professional
           development. As a result, she participates regularly in Continuing Education courses and trainings
           at both the local and national level. Nicole is recognized as a 
           <a href="https://www.giveanhour.org/">Give an Hour</a> program clinician for military personnel
           and their families. She possesses a specialization in cognitive behavioral therapy and eating
           disorders. Nicole is also a
           <a href="http://www.iaedp.com/overview%204%20Certification%20Overview.htm" title="CEDP">Certified
-          Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provide​s
-          supervision for other clinicians seeking advanced clinical licensure.​ In addition to her own
-          development, she also teaches the course, <i>Clinical Counseling Skills and Critical
-          Multiculturalism</i> as an adjunct professor at Elizabethtown College.
+          Eating Disorder Specialist</a> (CEDS), as well as a Certified Clinical Supervisor who provides
+          supervision for other clinicians seeking advanced clinical licensure. In addition to her own
+          development, she also teaches in the Social Department as an adjunct professor at Elizabethtown College
         </p><p>
-          In her spare time, she enjoys reading, crafting, volleyball, coaching 
-          <a href="https://www.girlsontherun.org/" title="Girls on the Run">Girls on the Run</a> and spending
-          time with family.
+          In her spare time, she enjoys reading, crafting, volleyball and spending time with family.
         </p>
         <p>
           <a href="https://www.psychologytoday.com/profile/205856" target="_top" title="Verified by Psychology Today" class="sx-verified-seal"></a>
@@ -337,6 +334,37 @@
         </p>
       </section>
       <section>
+        <h2>Colleen Kinney, Clinician</h2> <h3><i>Virtual Office</i></h3>
+        <img class="headshot" src="images/ColleenKinney.jpg" alt="Picture of Colleen Kinney">
+        <p>        
+         Colleen Kinney, LSW (she/her) is a licensed social worker and advocate with almost 20 years of
+         experience in providing assistance to those who need it the most. She graduated from Capital University
+         (Columbus, OH) with a BSW and Arizona State University with a MSW and MLS (Master of Legal Studies).
+        </p>
+        <p>
+          She has worked in both metro and rural areas in Arizona, Colorado, Pennsylvania, and London UK. She has
+          a strong background in community services, nonprofits and the state justice system. Her background
+          includes working with community based mental health, homeless/at risk teens, at risk & disabled college
+          students, victims of crime (specializing in domestic and sexual violence) as well as those reentering
+          from incarceration. She is an ally of the LGBTQUIA2+ community and believes her work in the community
+          and government systems has given her a strong understanding of the barriers individuals face when working
+          with those systems.
+        </p>
+        <p>
+          Her counseling approach is to collaborate with you and empower you to make the positive changes and lower
+          stress that you may desire in your life. She utilizes a variety of theories, mostly focusing on
+          cognitive-behavioral therapy and a humanistic theory approach to meet each person's unique needs. She
+          believes in being creative and innovative to solve problems while focusing on each client's individual
+          strengths and building goals.
+        </p>
+        <p>
+          In her spare time Colleen enjoys volunteering as a member of the KCIT (Keystone Crisis Intervention Team)
+          and the Crime Victims Alliance of Pennsylvania (CVAP). She enjoys spending time with her friends and
+          family outdoors, checking out a new restaurant, or trying a new baking recipe. She also enjoys watching
+          Doctor Who and the Great British Baking Show with her cat, Thor.
+        </p>
+      </section>
+      <section>
         <h2>Vilma Lopez, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/VilmaLopez.jpg" alt="Picture of Vilma Lopez">
         <p>
@@ -344,9 +372,10 @@
           degree in Psychology and Master's Degree in Social Work. Vilma has worked in the field since 2015 and
           has experience working with adolescents, young adults, and adults in school settings, youth programs,
           and higher education. She has experience working with clients that experience anxiety, depression,
-          suicidal ideation, grief and loss, life-adjustments, and emotional disturbances. Vilma's clinical
-          approach includes a focus on the utilization of Cognitive Behavioral Therapy and Strength-Based
-          practices in her treatment relationships. 
+          suicidal ideation, grief and loss, life-adjustments, and emotional disturbances. In addition, Vilma is
+          currently in training to become an Eating Disorder specialist. Vilma's clinical approach includes a focus
+          on the utilization of Cognitive Behavioral Therapy and Strength-Based practices in her treatment
+          relationships. 
         </p>
         <p>
           Vilma became passionate about working with the adolescent population during her many volunteer
