--- a/about-us.html
+++ b/about-us.html
@@ -237,7 +237,7 @@
           participating in trainings and Continuing Education courses at local and national levels. As a 
           social worker and member of the National Association of Social Workers
           (<a href="http://socialworkers.org/" title="NASW">NASW</a>), she ensures that 
-          she practices within typical social work guidelines and properly abides by the Code of Ethics.​
+          she practices within typical social work guidelines and properly abides by the Code of Ethics.
         </p>
       </section>
       <section>
@@ -312,11 +312,31 @@
         </p>
       </section>
       <section>
+        <h2>Erin Harris, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/notfound.jpg" alt="Picture of woman">
+        <p>
+          Erin is a licensed behavioral health provider who graduated from Shippensburg University with her
+          BSW in 2016 and her MSW in 2017.
+        </p>
+        <p>
+          Erin has worked in a variety of settings, striving to gain experiencing working with many groups of
+          people. She has experience working with adolescents in school settings, assisting in eliminating
+          barriers to academic success. She also has experience working with medically vulnerable populations
+          as well as those with extra needs developmentally, emotionally, and intellectually. She uses a
+          strengths-based approach to empower clients to overcome challenging situations. Erin is comfortable
+          working collaboratively with clients experiencing a variety of concerns including but not limited to
+          anxiety, depression, grief and loss, relationship and family concerns, and trauma. She also embraces
+          creativity such as art and writing in the therapeutic process, should that appeal to the client. Erin
+          understands that seeking counseling services can be difficult and is here to meet you where you are
+          in your journey.
+        </p>
+      </section>
+      <section>
         <h2>Julie Hillard, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/JuliaHillardPic.jpg" alt="Picture of Julie Hillard">
         <p>
           Julie Hillard is a Licensed Clinical Social Worker who graduated from Lebanon Valley College with her
-          Bachelor of Arts in Psychology and Sociology, and obtained her Master’s Degree in Social Work from
+          Bachelor of Arts in Psychology and Sociology, and obtained her Master's Degree in Social Work from
           Millersville University. Julie is also a Certified Grief Counseling Specialist (CGCS).
         </p>
         <p>
@@ -334,7 +354,7 @@
         </p>
       </section>
       <section>
-        <h2>Colleen Kinney, Clinician</h2> <h3><i>Virtual Office</i></h3>
+        <h2>Colleen Kinney, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/ColleenKinney.jpg" alt="Picture of Colleen Kinney">
         <p>        
          Colleen Kinney, LSW (she/her) is a licensed social worker and advocate with almost 20 years of
