--- a/teletherapy.html
+++ b/teletherapy.html
@@ -127,6 +127,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ashleydonmoyerncs" title="Virtual therapy link for Ashley Donmoyer"><img alt="doxy" src="images/doxy.png"/>Ashley Donmoyer</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/erinharrisncs" title="Virtual therapy link for Erin Harris"><img alt="doxy" src="images/doxy.png"/>Erin Harris</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/juliehillardncs" title="Virtual therapy link for Julie Hillard"><img alt="doxy" src="images/doxy.png"/>Julie Hillard</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/vilmalopezncs" title="Virtual therapy link for Vilma Lopez"><img alt="doxy" src="images/doxy.png"/>Vilma Lopez</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
