--- a/about-us.html
+++ b/about-us.html
@@ -265,7 +265,38 @@
           <a href="https://www.giveanhour.org/">Give an Hour</a> and was an active member of PA Cares and
           the Harrisburg Regional Planning Team for Operation Military Kids.
         </p>
-      </section>        
+      </section>
+      <section>
+        <h2>Tabitha Curtis, Clinician</h2> <h3><i>(Virtual Office)</i></h3>
+        <img class="headshot" src="images/tabithacurtis.jpg" alt="Picture of Tabitha Curtis">
+        <p>      
+          Tabitha Curtis, LSW (she/her) is a licensed social worker and advocate within her community.
+          She graduated from Shippensburg University with a Bachelor of Social Work in 2017 and a
+          Master of Social Work in 2021. She is actively pursuing clinical supervision to continue her
+          professional growth in clinical practice. She demonstrates a commitment to professional
+          development by regularly attending Continuing Education and local conferences that expand
+          her knowledge across all age groups.
+        </p><p>
+          Tabitha has experience working within behavioral health, the child welfare sector and is also a
+          certified school social worker within public education. These areas of focus have allowed her to
+          have the opportunity to work with homeless/at-risk families, at-risk & disabled adolescents,
+          adolescents with mental health needs, and children and families that are navigating the juvenile
+          justice and child welfare system. Tabitha is a proud ally of the LGBTQ2+ community and works
+          to understand the barriers faced within all vulnerable populations.
+        </p><p>
+          Her counseling approach is to collaborate with you and empower you to make the positive
+          changes that you desire in your life. She utilizes a variety of theoretical approaches, mostly
+          using techniques from the solution-focused, dialectical behavioral, and cognitive-behavioral
+          modalities. She strongly values rapport and trust in the therapeutic relationship.
+        </p><p>
+          In her spare time, Tabitha enjoys volunteering as a board of directors member of the Franklin
+          County Coalition for Progress and Franklin County Pride, and First Start Partnerships for
+          Children and Families. In her spare time, she enjoys attending her children's sporting events,
+          doing advocacy work, and traveling with her husband and family. Tabitha is passionate about
+          serving in her community to ensure equitable services for all, and is committed to empowering
+          vulnerable individuals with the tools they need to be successful and thrive
+        </p>
+      </section>  
       <section>
         <h2>Ashley Donmoyer, Clinician</h2> <h3><i>(Lenker Street Office and Virtual Office)</i></h3>
         <img class="headshot" src="images/AshleyDonmoyerPic.jpg" alt="Picture of Ashley Donmoyer">
