--- a/teletherapy.html
+++ b/teletherapy.html
@@ -125,6 +125,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ShannonCanuNCS" title="Virtual therapy link for Shannon Canu"><img alt="doxy" src="images/doxy.png"/>Shannon Canu</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/tabithacurtisncs" title="Virtual therapy link for Tabitha Curtis"><img alt="doxy" src="images/doxy.png"/>Tabitha Curtis</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ashleydonmoyerncs" title="Virtual therapy link for Ashley Donmoyer"><img alt="doxy" src="images/doxy.png"/>Ashley Donmoyer</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/erinharrisncs" title="Virtual therapy link for Erin Harris"><img alt="doxy" src="images/doxy.png"/>Erin Harris</a>
