--- a/about-us.html
+++ b/about-us.html
@@ -344,7 +344,7 @@
       </section>
       <section>
         <h2>Erin Harris, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
-        <img class="headshot" src="images/notfound.jpg" alt="Picture of woman">
+        <img class="headshot" src="images/ErinHarris.jpg" alt="Picture of Erin Harris">
         <p>
           Erin is a licensed behavioral health provider who graduated from Shippensburg University with her
           BSW in 2016 and her MSW in 2017.
