--- a/about-us.html
+++ b/about-us.html
@@ -564,6 +564,24 @@
           best at any phase of life.
         </p>
       </section>     
+      <section>
+        <h2>Jordan Zercher, Clinician</h2> <h3><i>(Market Street Office and Virtual Office)</i></h3>
+        <img class="headshot" src="images/JordanZercher.png" alt="Picture of Jordan Zercher">
+        <p>
+          Jordan is a dedicated Licensed Social Worker (LSW) committed to providing compassionate support and guidance
+          to her clients. Jordan earned her Bachelor's degree in Social Work from Messiah University and her Master's
+          degree in Social Work from Shippensburg University. 
+        </p><p>
+          Her therapeutic approach is rooted in a strengths-based perspective, which empowers individuals to tap into
+          their capabilities, resources, and communities to overcome challenges and achieve their goals. She prioritizes
+          creating a collaborative, empathetic, and non-judgmental therapeutic environment where clients feel heard,
+          valued, and supported on their journey toward healing and personal growth. As a committed lifelong learner,
+          Jordan is actively engaged in continuing education and continually refines her skills to ensure the highest
+          quality of care for her clients.
+        </p><p>
+          Beyond her professional endeavors, Jordan enjoys playing board games, reading, and traveling.
+        </p>
+      </section>     
     </div>
   </main>
   <footer class="footer bg-light">
