--- a/teletherapy.html
+++ b/teletherapy.html
@@ -137,6 +137,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/kirstiewardncs" title="Virtual therapy link for Kirstie Ward"><img alt="doxy" src="images/doxy.png"/>Kirstie Ward</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/paigewilliamsncs" title="Virtual therapy link for Paige Williams"><img alt="doxy" src="images/doxy.png"/>Paige Williams</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jordanzercherncs" title="Virtual therapy link for Jordan Zercher"><img alt="doxy" src="images/doxy.png"/>Jordan Zercher</a>
         </div>
       </section>
       <section>
