updated bootstrap refactored about us

--- a/contact-us.html
+++ b/contact-us.html
@@ -2,12 +2,11 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services has offices located in Pennsylvania and Maryland." />
   <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
 </head>
@@ -49,12 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2>Trindle Office Address<br>(<i style="color:red">Closed - Relocated to Market St 02/27/2023</i>)</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Market Office Address<br>(<i>Opening 02/27/2023</i>)</h2>
+          <h2>Market Office Address</h2>
           <p>
             1001 South Market St
           <br>
@@ -83,15 +77,20 @@
           <br>
             Mechanicsburg, PA 17050
           </p><p>
-            Voice: <a href="tel:717-406-5190​" title="Voice phone">717-406-5190​</a>
+            Voice: <a href="tel:717-406-5190" title="Voice phone">717-406-5190</a>
           </p><p>
             Fax: 717-202-2590
           </p><p>
-            <a href="mailto:info@northeasterncs.com​" title="email address">info@northeasterncs.com​</a>
+            <a href="mailto:info@northeasterncs.com" title="email address">info@northeasterncs.com</a>
           </p>
         </div>
         <div class="col-md-6">
           <iframe width="360" height="310" frameborder="0" title="Mechanicsburg office location map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d761.811859535534!2d-40.20362969931855!3d-77.00063533191596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c8e872cadc1dd1%3A0xa0fc26500b7c31b0!2s5000%20S%20Lenker%20St%20100%2C%20Mechanicsburg%2C%20PA%2017055!5e0!3m2!1sen!2sus!4v1676131131765!5m2!1sen!2sus" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Trindle Office Address<br>(<i>Closed - 02/27/2023</i>)</h2>
         </div>
       </div>
   </main>
@@ -104,8 +103,7 @@
     </div>
   </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
