--- a/teletherapy.html
+++ b/teletherapy.html
@@ -2,12 +2,11 @@
 <html lang="en-US">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services offeres teletherapy when in office visits are not possible." />
   <meta name="theme-color" content="#3AB34A">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Mechanicsburg, PA</title>
 </head>
@@ -49,7 +48,7 @@
                 interactive video and audio communications. Telehealth includes the practice of psychological health care delivery, diagnosis, consultation, treatment,
                 referral to resources, education, and the transfer of medical and clinical data.
               </p>
-              <ul style="list-style-type:none">
+              <ul>
                 <li>
                   I will be receiving mental health services through interactive videoconferencing. I understand the use of videoconferencing is an alternative method
                   of mental health care delivery and that my therapist will not be physically in the same room with me.
@@ -128,6 +127,7 @@
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/erinharrisncs" title="Virtual therapy link for Erin Harris"><img alt="doxy" src="images/doxy.png"/>Erin Harris</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/juliehillardncs" title="Virtual therapy link for Julie Hillard"><img alt="doxy" src="images/doxy.png"/>Julie Hillard</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/colleenkinneyncs" title="Virtual therapy link for Colleen Kinney"><img alt="doxy" src="images/doxy.png"/>Colleen Kinney</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/vilmalopezncs" title="Virtual therapy link for Vilma Lopez"><img alt="doxy" src="images/doxy.png"/>Vilma Lopez</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
           <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeastern" title="Virtual therapy link for Chelsea Ranney"><img alt="doxy" src="images/doxy.png"/>Chelsea Ranney</a>
@@ -179,9 +179,8 @@
     </div>
   </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   <script>
     $('#modalConsent').on('show.bs.modal', function (event) {
       var anchor = $(event.relatedTarget);
