--- a/contact-us.html
+++ b/contact-us.html
@@ -43,8 +43,69 @@
         are often unreliable. In order to protect your confidentiality, we do not communicate about
         anything clinical over email. Please do not use email to contact us in an emergency and be
         careful not to include any sensitive material.
+        <!--
+        If you are seeking an appointment, please fill out the form below. You may also leave us a
+        confidential voice mail or send an email, but please remember that email is not a confidential
+        method of communication, so security cannot be guaranteed and delivery times are often
+        unreliable. In order to protect your confidentiality, we recommend not including any sensitive
+        material via email.
+      -->
       </p>
     </div>
+    <div class="container mb-5 bg-light p-5 d-none">
+      <form id="appointmentForm" action="https://testapp.northeasterncs.com/api/AppointmentRequest" method="post">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+          <label for="address1">Address (Line 1):</label>
+          <input type="text" class="form-control" id="address1" name="address1" required>
+        </div>
+        <div class="form-group">
+          <label for="address2">Address (Line 2):</label>
+          <input type="text" class="form-control" id="address2" name="address2">
+        </div>
+        <div class="form-row">
+          <div class="col-md-4 col-12">
+            <label for="city">City:</label>
+            <input type="text" class="form-control" id="city" name="city" required>
+          </div>
+          <div class="col-md-4 col-12">
+            <label for="state">State:</label>
+            <input type="text" class="form-control" id="state" name="state" required>
+          </div>
+          <div class="col-md-4 col-12">
+            <label for="zip">Zip:</label>
+            <input type="text" class="form-control" id="zip" name="zip" required>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="col-md-4 col-12">
+            <label for="dob">Date of Birth:</label>
+            <input type="date" class="form-control" id="dob" name="dob" required>
+          </div>
+          <div class="col-md-4 col-12">
+            <label for="phone">Phone Number:</label>
+            <input type="tel" class="form-control" id="phone" name="phone" required>
+          </div>
+          <div class="col-md-4 col-12">
+            <label for="insurance">Health Insurance Provider:</label>
+            <input type="text" class="form-control" id="insurance" name="insurance" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="reason">Reason for seeking an appointment:</label>
+          <textarea class="form-control" id="reason" name="reason" required></textarea>
+        </div>
+        <div id="formResponse" class="form-group">
+        </div>
+        <div class="form-group text-right">
+          <button type="reset" class="btn btn-secondary">Clear Form</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>    
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -88,11 +149,7 @@
           <iframe width="360" height="310" frameborder="0" title="Mechanicsburg office location map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d761.811859535534!2d-40.20362969931855!3d-77.00063533191596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c8e872cadc1dd1%3A0xa0fc26500b7c31b0!2s5000%20S%20Lenker%20St%20100%2C%20Mechanicsburg%2C%20PA%2017055!5e0!3m2!1sen!2sus!4v1676131131765!5m2!1sen!2sus" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Trindle Office Address<br>(<i>Closed - 02/27/2023</i>)</h2>
-        </div>
-      </div>
+    </div>
   </main>
   <footer class="footer bg-light">
     <div class="container wrap text-center">
@@ -105,5 +162,49 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LfLxv8pAAAAAEJLr5AOe8_Klkq3miAnXVQa_6nW"></script>
+  <script>
+    document.getElementById('appointmentForm').addEventListener('submit', function(event) {
+      event.preventDefault(); // Prevent the default form submission
+  
+      grecaptcha.ready(function() {
+        grecaptcha.execute('6LfLxv8pAAAAAEJLr5AOe8_Klkq3miAnXVQa_6nW', {action: 'submit'}).then(function(token) {
+          // Modify the form data to include the reCAPTCHA token
+          const form = event.target;
+          const formData = new FormData(form);
+          formData.append('token', token); // Append the reCAPTCHA response token to your form data
+          
+          // Convert FormData to JSON, including the reCAPTCHA token
+          const json = JSON.stringify(Object.fromEntries(formData));
+          const responseElement = document.getElementById('formResponse');
+  
+          fetch(form.action, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: json,
+          })
+          .then(response => {
+            if (response.status === 201) {
+              responseElement.innerHTML = "Thank you. We have received your request and will get back to you soon.";
+            } else {
+              throw new Error('Failed to submit form');
+            }
+            setTimeout(() => {
+              form.reset();
+              responseElement.innerHTML = '';
+            }, 5000);
+          })
+          .catch(error => {
+            responseElement.innerHTML = "There was an error with your submission. Please try again later.";
+            setTimeout(() => {
+              responseElement.innerHTML = '';
+            }, 5000);
+          });
+        });
+      });
+    });
+  </script>
 </body>
 </html>
