--- a/index.html
+++ b/index.html
@@ -38,47 +38,11 @@
   <main>
     <div class="container">
       <p class="announcement"><a href="teletherapy.html">We offer teletherapy! - Click for more details</a></p>
+<!--      <p class="announcement"><a href="contact-us.html">Request an appointment today</a></p> -->
       <div class="jumbotron">
         <img class="img-fluid" src="images/400dpiLogo.png" alt="Trees"/>
         <h1>Northeastern Counseling Services</h1>
       </div>
-<!--
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!> Indicators <-!>
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
-        <!> Wrapper for slides <-!>
-        <div class="carousel-inner">
-          <div class="item active">
-            <img src="images/Logo.png" alt="Logo" style="width:100%;">
-          </div>
-          <div class="item">
-            <img src="images/01.jpg" alt="Exterior" style="width:100%;">
-          </div>
-          <div class="item">
-            <img src="images/02.jpg" alt="Interior 1" style="width:100%;">
-          </div>
-          <div class="item">
-            <img src="images/03.jpg" alt="Interior 2" style="width:100%;">
-          </div>
-        </div>
-        <!> Left and right controls <-!>
-        <!>
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-        <-!>
-      </div>
--->
       <article>
         <p>
         At Northeastern Counseling Services we understand that life can sometimes be overwhelming,
